# suials

./: .gitignore  l10n.yaml  pubspec.yaml  settings.gradle.kts
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_signal_9.xml
android/app/src/main/res/values/: colors.xml  (+2 more)
android/app/src/main/res/values-night/: styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/: .gitignore  als.p12  build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: apps.dart  boot.dart  main.dart  set.dart  set_display_group.dart  set_graphicsaccel.dart  set_output.dart  set_sound.dart  set_system.dart  set_terminal.dart  set_usermanual.dart  set_windowsappsupport.dart
lib/boot/: boot_globals.dart  boot_workflow.dart  constants.dart  ffi.dart  globals.dart  setup.dart  splash.dart  terminal.dart  ui.dart  utils.dart  workflow.dart
lib/lang/: en.arb  zh.arb  zh_TW.arb
lib/set/: display_group.dart  graphicsaccel.dart  output.dart  set.dart  sound.dart  system.dart  terminal.dart  usermanual.dart
suitar/: Cargo.toml
suitar/src/: lib.rs
(+15 files in other folders)
